--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,17 @@ set(CMAKE_CXX_STANDARD 17)
 # 查找glog库
 find_package(glog REQUIRED)
 
+file(GLOB PAKER_SRCS src/Paker/*.cpp)
+
 add_executable(Paker
     src/main.cpp
     src/cli.cpp
     src/package_manager.cpp
     src/builtin_repos.cpp
+    ${PAKER_SRCS}
 )
 
-target_include_directories(Paker PRIVATE include)
+target_include_directories(Paker PRIVATE include include/Paker)
 
 # 修复 std::filesystem 链接错误
 if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
