Update CMakeLists.txt to use GLOB_RECURSE for source file discovery: This change enhances the inclusion of all `.cpp` files in the `src/Paker` directory, improving build configuration and ensuring that newly added source files are automatically recognized.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 # 查找glog库
 find_package(glog REQUIRED)
 
-file(GLOB PAKER_SRCS src/Paker/*.cpp)
+file(GLOB_RECURSE PAKER_SRCS src/Paker/*.cpp)
 file(GLOB RECORDER_SRCS src/Recorder/*.cpp)
 
 add_executable(Paker
