Add unit test for CacheManager: Include `test_cache_manager.cpp` to validate CacheManager functionalities, enhancing test coverage and reliability of the caching system in the Paker package manager.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(PakerUnitTests
     unit/test_record.cpp
     unit/test_dependency_resolution.cpp
     unit/test_monitoring.cpp
+    unit/test_cache_manager.cpp
 )
 
 # 集成测试
