--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(PakerUnitTests
     unit/test_dependency_resolution.cpp
     unit/test_monitoring.cpp
     unit/test_cache_manager.cpp
+    unit/test_rollback.cpp
 )
 
 # 集成测试
