Fix: now we can build the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 # 查找glog库
 find_package(glog REQUIRED)
 
+# 查找OpenSSL库
+find_package(OpenSSL REQUIRED)
+
 file(GLOB_RECURSE PAKER_SRCS src/Paker/*.cpp)
 file(GLOB RECORDER_SRCS src/Recorder/*.cpp)
 
@@ -20,7 +23,7 @@ target_include_directories(Paker PRIVATE include include/Paker include/Recorder 
 
 # 修复 std::filesystem 链接错误
 if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    target_link_libraries(Paker stdc++fs glog::glog)
+    target_link_libraries(Paker stdc++fs glog::glog OpenSSL::SSL OpenSSL::Crypto)
 else()
-    target_link_libraries(Paker glog::glog)
+    target_link_libraries(Paker glog::glog OpenSSL::SSL OpenSSL::Crypto)
 endif() 
