新增内存管理和服务架构测试：在CMakeLists.txt中添加了内存管理和服务架构的单元测试文件，以增强Paker包管理器的测试覆盖率，确保内存管理和服务架构的稳定性。

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(PakerUnitTests
     unit/test_monitoring.cpp
     unit/test_cache_manager.cpp
     unit/test_rollback.cpp
+    unit/test_memory_management.cpp
+    unit/test_service_architecture.cpp
 )
 
 # 集成测试
