新增增量解析器单元测试文件：在CMakeLists.txt中添加了test_incremental_parser.cpp文件，以增强Paker包管理器的测试覆盖率和稳定性。

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(PakerUnitTests
     unit/test_rollback.cpp
     unit/test_memory_management.cpp
     unit/test_service_architecture.cpp
+    unit/test_incremental_parser.cpp
 )
 
 # 集成测试
