在CMakeLists.txt中添加了异步I/O单元测试文件test_async_io.cpp，以提升Paker包管理器的测试覆盖率和稳定性。

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(PakerUnitTests
     unit/test_memory_management.cpp
     unit/test_service_architecture.cpp
     unit/test_incremental_parser.cpp
+    unit/test_async_io.cpp
 )
 
 # 集成测试
